--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DEV_TO_API_KEY = your-api-key
-GITHUB_API_KEY = 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
+GITHUB_API_KEY =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
 NEXT_PUBLIC_GITHUB_USERNAME =Deep0409
 NOTION_API_TOKEN = secret_hmVZxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxIXEQ
 NOTION_DATABASE_ID = c494cxxxxxxxxxxxxxxxxxxxxxx3b050
